part-3/styles.css
body {

}

.main-container {
  display: flex;
  flex-direction: column;
}

.title-bar {
  border: 5px solid black;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.main-section {
  display: flex;
  flex-direction: row;
}

.sections {
  border: 5px solid black;
  border-top: none;
  display: flex;
  flex-direction: column;
  width: 30%;
}

.section-nav-title {
  background-color: grey;
}

.grocery-sections a {
  text-decoration: none;
}

.main-content {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow: scroll;
  width: 70%;
}

.main-section-output-title {
  display: flex;
  flex-direction: column;
}
.main-section-output-title h1 {
  font-size: 3em;
}

.main-content-section {
  display: flex;
  flex-direction: column;
  margin: 4% 0;
}

.main-section-output-produce-title {
  display: flex;
  flex-direction: row;
}

.item-names {
  flex-grow: 1;
}

.item-price {
  /*margin: 0 0%;*/
}

.add-to-cart-btn {
  align-self: flex-end;
  height: 2em;
  margin: 1% 3% 1% 15%;
}

.section-titles {
  font-style: italic;
}

.main-section-output-produce-details {
  display: flex;
  flex-direction: column;
}

.main-section-output-produce-details-items {
  display: flex;
  flex-direction: row;
}

